minor fixes for phonegap

--- a/web-app/css/my.css
+++ b/web-app/css/my.css
@@ -119,7 +119,7 @@ border-radius: 0 0 0 0 !important;
 
 .date {
 	padding-left: 5px;
-    width: 60%;
+    width: 55%;
 }
 
 .commentbutton, .likebutton {
